# ghostty-turbo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/app-shell/: Cargo.toml  build.rs
crates/app-shell/src/: app.rs  ghostty.rs  ghostty_embed.rs  git.rs  main.rs  theme.rs  usage.rs
scripts/: bootstrap_ghostty_latest.sh
